<resources>
    <string name="app_name">Hangman</string>
    <string name="reset_game">Reset Game</string>
    <string name="start_game">Start Game</string>
    <string name="show_stats">Show Stats</string>
    <string name="timer">Timer</string>
    <string name="return_to_game">Continue playing</string>
    <string name="guessed_letters">Guessed Letters: </string>
    <string name="guessed_words">Guessed Words: </string>
    <string name="quit_game">Quit Game</string>
    <string name="game_rules">Welcome to a game of Hangman!\n\nWhen you start the game, you start the countdown timer.\n
    You have 8 guess to complete</string>
    <string name="enter_guess">Single Letter Or Whole Word</string>
    <string name="guess_btn">Click To Guess</string>
    <string name="attempts">Guesses Left: </string>
    <string name="word_was">Word Was:\n </string>
    <string name="you_won">You Nailed it!\n Reset for new game</string>

</resources>
